--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,16 @@ Carthage/Build
 # cocoapods
 Example/Podfile.lock
 Example/Pods
+
+# Vim
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
