Feature/automated testing (#48)
* add uitests (#44)

* add uitests

* class teardown

* Update UI Tests for AWS Device Farm (#45)

* Add some fixes for device farm

* fix environment variables

* revert team changes

* remove todo

* revert domain change

* integration tests (#46)

* ATTNEventTestUtils

* add integration tests for purchase

* add more tests

* add all identifiers to all events

* rename

* use the same callback as task

* remove space

* fix country code

* add creative url formatter (#47)

* ATTNEventTestUtils

* add integration tests for purchase

* add more tests

* add all identifiers to all events

* rename

* use the same callback as task

* remove space

* fix country code

* add creative url formatter

---------

Signed-off-by: Olivia Kim <oliviakim321@gmail.com>

---------

Signed-off-by: Olivia Kim <oliviakim321@gmail.com>

--- a/Example/Example.xcodeproj/xcshareddata/xcschemes/Example - Local.xcscheme
+++ b/Example/Example.xcodeproj/xcshareddata/xcschemes/Example - Local.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:Example.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "69D3C148299EF2D10027934F"
+               BuildableName = "CreativeUITest.xctest"
+               BlueprintName = "CreativeUITest"
+               ReferencedContainer = "container:Example.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -28,6 +42,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "69D3C148299EF2D10027934F"
+               BuildableName = "CreativeUITest.xctest"
+               BlueprintName = "CreativeUITest"
+               ReferencedContainer = "container:Example.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -50,6 +75,23 @@
             ReferencedContainer = "container:Example.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "COM_ATTENTIVE_EXAMPLE_HOST"
+            value = "local"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "COM_ATTENTIVE_EXAMPLE_DOMAIN"
+            value = "mobileapps"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "COM_ATTENTIVE_EXAMPLE_MODE"
+            value = "production"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
