--- a/attentive-ios-sdk.xcodeproj/xcshareddata/xcschemes/attentive-ios-sdk Tests.xcscheme
+++ b/attentive-ios-sdk.xcodeproj/xcshareddata/xcschemes/attentive-ios-sdk Tests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "58D52E18292EC52B00CF32DE"
+               BuildableName = "attentive-ios-sdk Tests.xctest"
+               BlueprintName = "attentive-ios-sdk Tests"
+               ReferencedContainer = "container:attentive-ios-sdk.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -42,6 +58,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "58D52E18292EC52B00CF32DE"
+            BuildableName = "attentive-ios-sdk Tests.xctest"
+            BlueprintName = "attentive-ios-sdk Tests"
+            ReferencedContainer = "container:attentive-ios-sdk.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
