Adds SDK version (#53)
Adds SDK version tracking
Sends INFO events
Changes events endpoint from GET to POST requests

--- a/Example/Example.xcodeproj/xcshareddata/xcschemes/Example - Pod.xcscheme
+++ b/Example/Example.xcodeproj/xcshareddata/xcschemes/Example - Pod.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1410"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "58332EC2292EC18800B1ECF3"
-               BuildableName = "attentive_ios_sdk.framework"
-               BlueprintName = "attentive-ios-sdk"
-               ReferencedContainer = "container:attentive-ios-sdk.xcodeproj">
+               BlueprintIdentifier = "69CCAF4B28DCDE57007620BD"
+               BuildableName = "Example - Pod.app"
+               BlueprintName = "Example - Pod"
+               ReferencedContainer = "container:Example.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "69CCAF4B28DCDE57007620BD"
+            BuildableName = "Example - Pod.app"
+            BlueprintName = "Example - Pod"
+            ReferencedContainer = "container:Example.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -47,15 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "58332EC2292EC18800B1ECF3"
-            BuildableName = "attentive_ios_sdk.framework"
-            BlueprintName = "attentive-ios-sdk"
-            ReferencedContainer = "container:attentive-ios-sdk.xcodeproj">
+            BlueprintIdentifier = "69CCAF4B28DCDE57007620BD"
+            BuildableName = "Example - Pod.app"
+            BlueprintName = "Example - Pod"
+            ReferencedContainer = "container:Example.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
