add lint to ci (#55)
* try adding lint

* fix version

* try origin

* try checkout

* try find

* Revert "fix version"

This reverts commit 33c3f931d0acaaa00ea00544cb51ec025dc9ec0c.

* add version back

* separate install

* fix

* try no pipe

* hm

* hm again

* rename

* fix format

Signed-off-by: Olivia Kim <oliviakim321@gmail.com>

* remove language

* add headers

* lint

* Revert "lint"

This reverts commit a115827b4a916c50f33e9c8b4d717a7a4b78c477.

* lint

* try 15

* fix

Signed-off-by: Olivia Kim <oliviakim321@gmail.com>

* fix 2

* try 15 again

* try 11

Signed-off-by: Olivia Kim <oliviakim321@gmail.com>

* fix for 11

* lint script

* typo

* test bad lint

* return code

* ?

* try exit

Signed-off-by: Olivia Kim <oliviakim321@gmail.com>

* HMM

* lint local

---------

Signed-off-by: Olivia Kim <oliviakim321@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ concurrency:
   group: ${{ github.ref_name }}
   cancel-in-progress: true
 jobs:
-  iOS:
+  test:
     name: Test iOS
     runs-on: macOS-12
     env:
@@ -23,5 +23,26 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
-      - name: "Play"
+      - name: "Run tests"
         run: xcodebuild -project "attentive-ios-sdk.xcodeproj" -scheme "attentive-ios-sdk-framework" -destination "platform=iOS Simulator,OS=16.1,name=iPhone 13 Pro" test
+
+  lint:
+    name: Run lint
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: "Install clang-format"
+        run: sudo apt -y install clang-format-11
+      - name: "Run lint"
+        run: |
+          echo "Running lint"
+          find . \( \
+            -path "./Vendor/*" -prune -o \
+            -path "./*/Pods/*" -prune -o \
+            -path "./DerivedData/*" -prune -o \
+            -path "./build/*" -prune -o \
+            -path "./*/DerivedData/*" -prune -o \
+            -path "./*/build/*" -prune -o \
+            -path "./attentive-ios-sdk.xc*" -prune \
+            \) \
+            -o -name "*.h" -o -name "*.m" -print | xargs clang-format --dry-run --Werror --assume-filename=Objective-C
