remove explicit dependency versioning

--- a/ExampleSwift/Podfile
+++ b/ExampleSwift/Podfile
@@ -5,6 +5,6 @@ target 'ExampleSwift - Pod' do
   use_frameworks!
 
   # Pods for Example
-  pod 'attentive-ios-sdk', '0.4.3-beta.1'
+  pod 'attentive-ios-sdk'
 
 end
