--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ Carthage/Build
 # cocoapods
 Example/Podfile.lock
 Example/Pods
+ExampleSwift/Podfile.lock
+ExampleSwift/Pods
 
 # swift builds
 .build/*
