--- a/ExampleSwift/Podfile
+++ b/ExampleSwift/Podfile
@@ -5,6 +5,5 @@ target 'ExampleSwift - Pod' do
   use_frameworks!
 
   # Pods for Example
-  pod 'attentive-ios-sdk'
-
+  pod 'attentive-ios-sdk', :path => '../'
 end
