added UI Test to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,12 @@ on:
   push:
     branches:
       - main
+      - develop
       - feature/*
   pull_request:
     branches: 
       - main
+      - develop
       - feature/*
   workflow_dispatch:
 
@@ -26,6 +28,28 @@ jobs:
       - name: "Run tests"
         run: xcodebuild -project "attentive-ios-sdk.xcodeproj" -scheme "attentive-ios-sdk-framework" -destination "platform=iOS Simulator,OS=16.1,name=iPhone 13 Pro" test
 
+  ui-tests:
+    name: Run iOS UI Tests
+    runs-on: macOS-14
+    env:
+      DEVELOPER_DIR: "/Applications/Xcode_15.3.app/Contents/Developer"
+    timeout-minutes: 10
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: "Run UI Tests"
+        run: |
+          set -o pipefail
+          xcodebuild -workspace "attentive-ios-sdk.xcworkspace" -scheme "CreativeUITest" -destination "platform=iOS Simulator,OS=17.4,name=iPhone 15 Pro" -derivedDataPath build/ -resultBundlePath ui-test-results.xcresult test | xcpretty
+      - name: Compress UI Test Results
+        if: failure()
+        run: tar -czf ui-test-results.xcresult.tar.gz ui-test-results.xcresult
+      - name: Upload UI Test Results
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: ui-test-results
+          path: ui-test-results.xcresult.tar.gz
   lint:
     name: Run lint
     runs-on: ubuntu-20.04
