--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Reset Simulators
+        run: xcrun simctl erase all
       - name: "Run UI Tests"
         run: |
           set -o pipefail
