--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install SwiftLint
+        run: brew install swiftlint
       - name: Set Xcode 15
         run: |
           sudo xcode-select -switch /Applications/Xcode_15.3.app
