--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
     branches: 
       - main
       - feature/*
+      - swift-migration
   workflow_dispatch:
 
 concurrency:
@@ -27,22 +28,15 @@ jobs:
         run: xcodebuild -project "attentive-ios-sdk.xcodeproj" -scheme "attentive-ios-sdk-framework" -destination "platform=iOS Simulator,OS=16.1,name=iPhone 13 Pro" test
 
   lint:
-    name: Run lint
-    runs-on: ubuntu-20.04
+    name: Run Swiftlint
+    runs-on: macos-14
     steps:
-      - uses: actions/checkout@v3
-      - name: "Install clang-format"
-        run: sudo apt -y install clang-format-11
-      - name: "Run lint"
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install SwiftLint
+        run: brew install swiftlint
+      - name: Set Xcode 15
         run: |
-          echo "Running lint"
-          find . \( \
-            -path "./Vendor/*" -prune -o \
-            -path "./*/Pods/*" -prune -o \
-            -path "./DerivedData/*" -prune -o \
-            -path "./build/*" -prune -o \
-            -path "./*/DerivedData/*" -prune -o \
-            -path "./*/build/*" -prune -o \
-            -path "./attentive-ios-sdk.xc*" -prune \
-            \) \
-            -o -name "*.h" -o -name "*.m" -print | xargs clang-format --dry-run --Werror --assume-filename=Objective-C
+          sudo xcode-select -switch /Applications/Xcode_15.3.app
+      - name: Lint
+        run: swiftlint
