--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Xcode - Build and Analyze
+name: Run Unit Test
 
 on:
   push:
@@ -15,6 +15,7 @@ on:
 concurrency:
   group: ${{ github.ref_name }}
   cancel-in-progress: true
+
 jobs:
   test:
     name: Test iOS
@@ -26,24 +27,3 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Run tests"
         run: xcodebuild -project "attentive-ios-sdk.xcodeproj" -scheme "attentive-ios-sdk-framework" -destination "platform=iOS Simulator,OS=16.1,name=iPhone 13 Pro" test
-
-  lint:
-    name: Run lint
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - name: "Install clang-format"
-        run: sudo apt -y install clang-format-11
-      - name: "Run lint"
-        run: |
-          echo "Running lint"
-          find . \( \
-            -path "./Vendor/*" -prune -o \
-            -path "./*/Pods/*" -prune -o \
-            -path "./DerivedData/*" -prune -o \
-            -path "./build/*" -prune -o \
-            -path "./*/DerivedData/*" -prune -o \
-            -path "./*/build/*" -prune -o \
-            -path "./attentive-ios-sdk.xc*" -prune \
-            \) \
-            -o -name "*.h" -o -name "*.m" -print | xargs clang-format --dry-run --Werror --assume-filename=Objective-C
