--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - main
-      - feature/*
+      - "feature/*"
   pull_request:
     branches: 
       - main
-      - feature/*
+      - "feature/*"
       - swift-migration
   workflow_dispatch:
 
