--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,12 +1,15 @@
 name: Lint
 
 on:
+  push:
+    branches:
+      - main
+      - "feature/*"
   pull_request:
     branches:
-      - develop
       - swift-migration
       - main
-      - feature/*
+      - "feature/*"
 
 concurrency:
   group: ${{ github.ref_name }}
