--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -3,10 +3,9 @@ name: Run UI Test Cases
 on:
   pull_request:
     branches:
-      - develop
       - swift-migration
       - main
-      - feature/*
+      - "feature/*"
 
 concurrency:
   group: ${{ github.ref_name }}
@@ -24,7 +23,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Reset Simulators
         run: xcrun simctl erase all
-      - name: "Run UI Tests"
+      - name: Run UI Tests
         run: |
           set -o pipefail
           xcodebuild -workspace "attentive-ios-sdk.xcworkspace" -scheme "CreativeUITest" -destination "platform=iOS Simulator,OS=17.4,name=iPhone 15 Pro" -derivedDataPath build/ -resultBundlePath ui-test-results.xcresult test | xcpretty
