--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -8,7 +8,7 @@ on:
       - "feature/*"
 
 concurrency:
-  group: ${{ github.ref_name }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
