--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,6 @@ target 'Example - Pod' do
   use_frameworks!
 
   # Pods for Example
-  pod 'attentive-ios-sdk'
+  pod 'ATTNSDKFramework', :path => '../'
 
 end
