added condition to verify release branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - "feature/*"
+      - "release/*"
   pull_request:
     branches: 
       - main
       - "feature/*"
+      - "release/*"
   workflow_dispatch:
 
 concurrency:
