--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - main
       - "feature/*"
+      - "release/*"
   pull_request:
     branches:
       - main
       - "feature/*"
+      - "release/*"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
