--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - "feature/*"
+      - "release/*"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
